--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,21 @@
 services:
 
-  node-application:
+  app:
     build: .
-    container_name: node-application
+    container_name: app
+    environment:
+      - MONGO_URI=mongodb://mongo:27017/mydatabase
     ports:
       - "3000:3000"
     restart: always
+
+  mongo:
+    container_name: database
+    image: mongo:latest
+    restart: always
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
+volumes:
+  mongo-data:
