--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "description": "",
   "dependencies": {
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongoose": "^8.16.0"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
